# ascey-

./: Cargo.toml  README.md  canister_ids.json  dfx.json  download.sh  draft.txt  dropdown tommy.txt  mercx_backend.did  package-lock.json  package.json  r.sh  setup_project.sh
src/ascey2_frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.js
src/ascey2_frontend/src/: App.jsx  Footer.jsx  Home.jsx  InappBrowser.jsx  Navbar.jsx  ReceiveModal.jsx  SignupForm.jsx  SuccessModal.jsx  Transcations.jsx  Transfer.jsx  index.css  index.scss  main.jsx  use-auth-client.jsx
src/ascey2_frontend/src/Actions/: ActionsOptions.jsx  TokenData.jsx
src/ascey2_frontend/src/Actions/Buy/: Buy.jsx  SuccessModel.jsx
src/ascey2_frontend/src/Actions/Sell/: Sell.jsx  SuccessSell.jsx
src/ascey2_frontend/src/Actions/Swap/: SuccessModel.jsx  Swap.jsx
src/ascey_backend/: Cargo.toml  ascey_backend.did
src/ascey_backend/src/: general.rs  lib.rs  stable_memory.rs  xrc_mock.rs
src/ascey_backend/src/pool/: add_pool_arg.rs  handlers.rs  mod.rs  stable_pool.rs
src/ascey_backend/src/swap/: swap.rs
src/kyc/: Cargo.toml  kyc.did
src/kyc/src/: lib.rs  store.rs
src/kyc/src/api/user/: queries.rs  updates.rs
src/kyc/src/models/: user.rs
xrc/: xrc.did
