[package]
name = "ascey_backend"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
[build-dependencies]
dotenv = "0.15"
[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
icrc-ledger-types = "0.1.5"
serde = "1.0.197"
serde_derive = "1.0.197"
ic-stable-structures = "0.6.7"
serde_cbor = "0.11.2"
num = "0.4.3"

