[package]
name = "kyc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
icrc-ledger-types = "0.1.5"
serde = "1.0.197"
serde_derive = "1.0.197"
ic-stable-structures = "0.6.7"
regex = "1.11.1"
lazy_static = "1.5.0"
url = "2.5.3"
ic-cdk-macros = "0.17.0"
